# samples

./: .gitignore  README.md  WORKSPACE  build.gradle  settings.gradle
ch01/: README.md
ch01/productinfo/: README.md
ch01/productinfo/go/: Dockerfile  grpc-productinfo.yaml
ch01/productinfo/go/client/: BUILD.bazel  main.go
ch01/productinfo/go/product_info/: product_info.pb.go
ch01/productinfo/go/server/: BUILD.bazel  main.go
ch01/productinfo/java/: BUILD.bazel
ch01/productinfo/java/client/: ProductInfoClient.java
ch01/productinfo/proto/: product_info.proto
ch01/uc01/: product_info.proto  product_mgt.proto
ch01/uc01/golang/: main.go
ch01/uc01/golang/product_info/: product_info.pb.go
ch01/uc01/golang/product_info_client/: main.go
ch01/uc01/golang/product_info_server/: main.go
ch01/uc01/golang/product_mgt/: product_mgt.pb.go
ch01/uc01/golang/product_mgt_client/: main.go
ch01/uc01/golang/product_mgt_server/: main.go
ch01/uc01/java/product-info-server/: build.gradle  settings.gradle
ch01/uc02/: README.md
ch01/uc03/: README.md
ch02/: README.md
ch02/productinfo/: README.md
ch02/productinfo/ballerina/: README.md
ch02/productinfo/ballerina/client/: main.bal
ch02/productinfo/ballerina/server/: ProductInfo_sample_service.bal  product_info_pb.bal
ch02/productinfo/cpp/: README.md
ch02/productinfo/cpp/client/: CMakeLists.txt  ProductInfoClient.cc
ch02/productinfo/cpp/server/: CMakeLists.txt  ProductInfoImpl.cpp  ProductInfoImpl.h  ProductInfoServer.cc
ch02/productinfo/go/: Dockerfile  README.md
ch02/productinfo/go/client/: BUILD.bazel  go.mod  main.go
ch02/productinfo/go/product_info/: product_info.pb.go
ch02/productinfo/go/proto/: product_info.pb.go
ch02/productinfo/go/server/: BUILD.bazel  go.mod  main.go
ch02/productinfo/java/: BUILD.bazel  README.md
ch02/productinfo/java/client/: ProductInfoClient.java  build.gradle
ch02/productinfo/java/client/src/main/java/ecommerce/: ProductInfoClient.java
ch02/productinfo/java/ecommerce/: ProductInfoGrpc.java  ProductInfoOuterClass.java
ch02/productinfo/java/server/: Dockerfile  ProductInfoImpl.java  build.gradle
ch02/productinfo/java/server/src/main/java/ecommerce/: ProductInfoImpl.java  ProductInfoServer.java
ch02/productinfo/kotlin/: README.md
ch02/productinfo/kotlin/client/: build.gradle
ch02/productinfo/kotlin/server/: build.gradle
ch02/productinfo/nodejs/: README.md
ch02/productinfo/nodejs/client/: client.js
ch02/productinfo/nodejs/server/: server.js
ch02/productinfo/python/: README.md
ch02/productinfo/python/client/: client.py  product_info_pb2_grpc.py
ch02/productinfo/python/server/: product_info_pb2.py  server.py
ch02/uc01/: README.md  product-info.proto
ch03/: README.md
ch03/order-service/go/: README.md
ch03/order-service/go/client/: BUILD.bazel  go.mod  main.go
ch03/order-service/go/order_service/: order_management.pb.go  order_management.proto  order_service.pb.go  order_service.proto
ch03/order-service/go/proto/: BUILD.bazel  order_management.proto
ch03/order-service/go/server/: BUILD.bazel  main.go
ch03/order-service/go/service/: go.mod  main.go
ch03/order-service/java/: BUILD.bazel  README.md
ch03/order-service/java/client/src/main/java/ecommerce/: OrderMgtClient.java
ch03/order-service/java/server/src/main/java/ecommerce/: OrderMgtServer.java  OrderMgtServiceImpl.java
ch03/order-service/proto/: BUILD.bazel  order_management.proto  order_service.proto
ch03/order-service/python/: README.md
ch03/order-service/python/client/: client.py
ch03/order-service/python/server/: order_management_pb2.py  order_management_pb2_grpc.py  server.py
ch05/: README.md
ch05/basic-authentication/: README.md
ch05/basic-authentication/go/client/: BUILD.bazel  main.go
ch05/basic-authentication/go/server/: main.go
ch05/cancellation/order-service/go/: README.md
ch05/cancellation/order-service/java/: README.md
ch05/compression/order-service/go/: README.md
ch05/compression/order-service/java/: README.md
ch05/deadlines/order-service/go/: README.md
ch06/: README.md
ch06/basic-authentication/certs/: README.md  server.crt  server.key  server.pem
ch06/basic-authentication/go/: README.md
ch06/basic-authentication/java/: README.md
ch06/mutual-tls-channel/: README.md
ch06/mutual-tls-channel/certs/: README.md  ca.crt  ca.key  client.crt  client.csr  client.key  client.pem  server.crt  server.csr
ch06/mutual-tls-channel/go/: README.md
ch06/mutual-tls-channel/java/: README.md
ch06/secure-channel/: README.md
ch06/secure-channel/certs/: README.md
ch06/secure-channel/go/: README.md
ch06/secure-channel/java/: README.md
ch06/token-based-authentication/: README.md
ch06/token-based-authentication/go/: README.md
ch06/token-based-authentication/java/: README.md
ch07/: README.md
ch07/grpc-continous-integration/go/: README.md
ch07/grpc-docker/go/: Dockerfile  README.md
ch07/grpc-kubernetes/: README.md
ch07/grpc-kubernetes/client/: grpc-prodinfo-client-job.yaml
ch07/grpc-kubernetes/ingress/: grpc-prodinfo-ingress.yaml  main.go
ch07/grpc-kubernetes/server/: grpc-prodinfo-server.yaml
ch07/grpc-opencensus-tracing/credentials/: grpc-up-and-running-demo-452678b739e1.json
ch07/grpc-opencensus-tracing/go/: README.md
ch07/grpc-opencensus-tracing/go/client/: BUILD.bazel  main.go
ch07/grpc-opencensus-tracing/java/: README.md
ch07/grpc-opencensus/credentials/: grpc-up-and-running-demo-452678b739e1.json
ch07/grpc-opencensus/go/: README.md
ch07/grpc-opentracing/go/: README.md
ch07/grpc-opentracing/tracer/: tracer.go
ch07/grpc-prometheus/go/: README.md
ch08/: README.md
ch08/grpc-gateway/go/: README.md
ch08/grpc-gateway/proto/: product_info.proto  product_info.swagger.json
ch08/server-reflection/go/: README.md
ch08/server-reflection/java/: BUILD.bazel  README.md
ch08/server-reflection/java/server/: build.gradle
ch08/server-reflection/java/server/src/main/java/ecommerce/: ProductInfoServer.java
ch08/server-reflection/proto/: BUILD.bazel
gradle/wrapper/: gradle-wrapper.properties
(+152 files in other folders)
