package(default_visibility = ["//visibility:public"])

load("@build_stack_rules_proto//java:java_grpc_library.bzl", "java_grpc_library")

java_grpc_library(
    name = "java_order_service_proto",
    has_services = True,
    deps = [
        "//ch03/order-service/proto:ordermanagement_grpc",
    ],
)

java_library(
    name = "serverlib",
    srcs = [
        "server/OrderServiceImpl.java",
        # "server/ProductInfoImpl.java",
    ],
    deps = [
        ":java_order_service_proto",
        "@com_google_protobuf//:protobuf_java_util",
    ],
)

java_binary(
    name = "server",
    main_class = "server.ProductInfoServer",
    runtime_deps = [
        ":serverlib",
        "@io_grpc_grpc_java//netty:netty",
    ],
)

java_binary(
    name = "client",
    srcs = [
        "client/ProductInfoClient.java",
    ],
    main_class = "client.ProductInfoClient",
    deps = [
        ":java_order_service_proto",
        ":serverlib",
        "@io_grpc_grpc_java//netty:netty",
    ],
)
