load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@build_stack_rules_proto//go:go_grpc_library.bzl", "go_grpc_library")

go_grpc_library(
    name = "go_product_info_proto",
    go_deps = [
        "@com_github_golang_protobuf//ptypes/wrappers:go_default_library",
    ],
    importpath = "github.com/grpc-up-and-running/samples/ch07/grpc-prometheus/go/proto",
    deps = ["//ch07/productinfo/proto:productinfo_grpc"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grpc-up-and-running/samples/ch07/grpc-prometheus/go/client",
    visibility = ["//visibility:private"],
    deps = [
        ":go_product_info_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@com_github_golang_protobuf//ptypes/wrappers:go_default_library"
    ],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
